--- a/css/main.css
+++ b/css/main.css
@@ -45,6 +45,12 @@ html {
   opacity: 0.3 !important;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 h1 {
   text-transform: uppercase;
   font-size: 88px;
@@ -180,7 +186,7 @@ main {
   background-color: var(--color-bg-main);
   outline-offset: 2px;
   outline: 2px solid var(--color-bg-main);
-  border-radius: 0px;
+  border-radius: 4px;
   cursor: pointer;
   overflow: hidden;
   transition: all 0.3s ease;
@@ -196,17 +202,22 @@ main {
   }
 }
 
-.lock-icon {
+.lock-icon-wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 24px;
-  height: 24px;
   display: none;
 }
 
-.agent-img.locked + .lock-icon {
+.lock-icon {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.agent-img.locked + .lock-icon-wrapper {
   display: block !important;
 }
 
